<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".activities.DetailsActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/zakaria" />

    <TextView
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@id/img"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/yourName"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Md Zakaria Hossain"
        android:textColor="@android:color/white"
        android:layout_below="@id/img"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginEnd="10dp"
        android:scrollHorizontally="true"
        android:layout_toEndOf="@id/name"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/id"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_id"
        android:layout_below="@id/yourName"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/yourId"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="152-15-5729"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginEnd="10dp"
        android:scrollHorizontally="true"
        android:textColor="@android:color/white"
        android:layout_below="@id/yourName"
        android:layout_toEndOf="@id/id"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/email"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/yourId"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/yourEmail"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="zakariahossain143@gmail.com"
        android:textColor="@android:color/white"
        android:layout_below="@id/yourId"
        android:maxLines="1"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:layout_toEndOf="@id/email"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/phone"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_below="@id/yourEmail"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/yourPhone"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="+8801710457406"
        android:maxLines="1"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:textColor="@android:color/white"
        android:layout_below="@id/yourEmail"
        android:layout_toEndOf="@id/phone"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/yourPhone">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/listen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/listen_icon"
            android:onClick="listenUserDetails"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/phoneCall"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/phone_call_icon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:onClick="phoneCallAction" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/sendSms"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/send_sms_icon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:onClick="sendSmsAction" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/sendEmail"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/email_icon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:onClick="emailSendAction" />

    </LinearLayout>

</RelativeLayout>
